--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
+  "name": "auto-testing",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "mocha --require @babel/register tests/task3-yandex.js"
+  },
   "dependencies": {
     "chai-as-promised": "^7.1.2",
     "selenium-webdriver": "^4.19.0"
   },
   "devDependencies": {
     "@babel/register": "^7.23.7",
+    "allure-mocha": "^2.15.1",
     "chai": "^4.4.1",
     "mocha": "^10.4.0"
   }
